# Melexis_Tactile_Sensor

./: CMakeLists.txt  package.xml
UNIGE/: README.md  runMeFirst.py
UNIGE/Data/: Calib.csv  Calibration_init.csv
UNIGE/Demo/: Demo.py  Demo4Taxel_Kit.py
UNIGE/Test_Files/: test_Libraries.py  test_Melexio_Base.py  test_Tactaxis.py  test_TactaxisForce.py  test_TactaxisForce_4TaxelModule.py  test_TactaxisForce_SingleModule.py  test_USB_VCP.py
launch/: melexis_driver.launch  melexis_driver_2sensors.launch
msg/: MelexisForce.msg
scripts/: melexis_driver.py  ros_visualizer.py
